Fixing Layout Issues on Mobile Layout

--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
   margin-right: 20px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 150px;
+}
+
 .card {
     height: 92%;
     margin-bottom: 10px;
